--- a/Chila.html
+++ b/Chila.html
@@ -56,7 +56,9 @@
                          <br><br>
                        </h1>
                          <br><br>
-                         <h2  class='innerhead'>അല്പം ആഡംബരമാണ് എന്നറിയാം. എന്നാലും എനിക്കെന്റെ സ്വാതന്ത്ര്യമാണ് വലുത്. ഞാൻ എങ്ങനെയുള്ള സിസ്റ്റമാണ് ഇൻസ്റ്റാൾ ചെയ്യേണ്ടത്?</h2>
+                         <h2  class='innerhead'>അല്പം ആഡംബരമാണ് എന്നറിയാം.<br>
+                             എന്നാലും എനിക്കെന്റെ സ്വാതന്ത്ര്യമാണ് വലുത്. <br>
+                             ഞാൻ എങ്ങനെയുള്ള സിസ്റ്റമാണ് ഇൻസ്റ്റാൾ ചെയ്യേണ്ടത്?</h2>
                          <br><br>
                          <h1 class='all-right'>സോളാറിലേക്ക് മാറാൻ തീരുമാനിച്ചാൽ ആദ്യം ചൂട് വെള്ളത്തിന്റെ ആവശ്യങ്ങളും ഉണക്കൽ ആവശ്യങ്ങളും സോളാറിലേക്ക് മാറ്റുക. അത് കഴിഞ്ഞ് മാത്രം വൈദ്യുതി ആവശ്യങ്ങളെക്കുറിച്ച് ചിന്തിക്കുക. വൈദ്യുതി ആവശ്യത്തിലേക്ക് നീങ്ങുമ്പോൾ, മൂന്ന് തരത്തിൽ സോളാർ വൈദ്യുതി ഉപയോഗിക്കാം.<br><br>
                          
